@@ -850,19 +850,19 @@ class Preferences(dialog.Utility):
 
 		self.section_misc = page.add_section("Miscellaneous")
 
-		# check-button for username
-		self.check_chain_username = ui.CheckButton("Also copy username when copying password")
-		ui.config_bind(self.config, "chain_username", self.check_chain_username)
-
-		self.tooltips.set_tip(self.check_chain_username, "When the password is copied to clipboard, put the username before the password as a clipboard \"chain\"")
-		self.section_misc.append_widget(None, self.check_chain_username)
-
 		# show passwords checkbutton
 		self.check_show_passwords = ui.CheckButton("Show passwords and other secrets")
 		ui.config_bind(self.config, "show_passwords", self.check_show_passwords)
 
 		self.tooltips.set_tip(self.check_show_passwords, "Display passwords and other secrets, such as PIN codes (otherwise, hide with ******)")
 		self.section_misc.append_widget(None, self.check_show_passwords)
+
+		# check-button for username
+		self.check_chain_username = ui.CheckButton("Also copy username when copying password")
+		ui.config_bind(self.config, "chain_username", self.check_chain_username)
+
+		self.tooltips.set_tip(self.check_chain_username, "When the password is copied to clipboard, put the username before the password as a clipboard \"chain\"")
+		self.section_misc.append_widget(None, self.check_chain_username)
 
 
 	def run(self):
